This is the HISTORY file for the Yale SML/NJ CVS repository.

An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:


Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2006/14/06 09:50:00 CST
Description:

Fixed the code in runtime/c-libs/posix-tty/{tcgetattr,tcsetattr}.c to
get the c_cc termios data copied correctly.  Also moved the allocation
of the string to avoid problems if it caused a GC.

Thanks to Timothy Bourke for the bug report and fix.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume)
Date: 2006/12/08 09:50:00 CST
Description:

Added code to CM's "standard shell tool" implementation which
causes it to tolerate (with a warning) the situation where the shell
command fails (e.g., due to the shell command's non-existence)
as long as all target files exist.

This makes it possible to, e.g., build ml-yacc from sources even if
svn checkout messed up the time stamps on files in such a way that
yacc.grm is younger than yacc.grm.sml or yacc.grm.sig.  (Ml-yacc would
be needed to re-process yacc.grm, but obviously it might not yet be
available at that time.)

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2006/12/06 12:06:00 CST
Description:

Fixed the types of recvVecFrom, recvVecFrom', recvVecFromNB, and
recvVecFromNB' in the SOCKET signature.  This error is actually
in the SML Basis specification too.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2006/12/05 22:40:00 CST
Description:
